// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component Check render with button buy cancel 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="main_products_item"
      >
        <img
          alt=""
          class="main_products_item_img"
        />
        <div
          class="main_products_item_container"
        >
          <p
            class="main_products_item_container_name"
          />
          <p
            class="main_products_item_container_price"
          >
             $
          </p>
          <button
            class="main_products_item_container_btn"
          >
            Add to wish
          </button>
          <button
            class="main_products_item_container_btn"
          >
            Buy now
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="main_products_item"
    >
      <img
        alt=""
        class="main_products_item_img"
      />
      <div
        class="main_products_item_container"
      >
        <p
          class="main_products_item_container_name"
        />
        <p
          class="main_products_item_container_price"
        >
           $
        </p>
        <button
          class="main_products_item_container_btn"
        >
          Add to wish
        </button>
        <button
          class="main_products_item_container_btn"
        >
          Buy now
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ListItem component Check snapshot with button buy 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="main_products_item"
      >
        <img
          alt=""
          class="main_products_item_img"
        />
        <div
          class="main_products_item_container"
        >
          <p
            class="main_products_item_container_name"
          />
          <p
            class="main_products_item_container_price"
          >
             $
          </p>
          <button
            class="main_products_item_container_btn"
          >
            Add to wish
          </button>
          <button
            class="main_products_item_container_btn"
          >
            Buy now
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="main_products_item"
    >
      <img
        alt=""
        class="main_products_item_img"
      />
      <div
        class="main_products_item_container"
      >
        <p
          class="main_products_item_container_name"
        />
        <p
          class="main_products_item_container_price"
        >
           $
        </p>
        <button
          class="main_products_item_container_btn"
        >
          Add to wish
        </button>
        <button
          class="main_products_item_container_btn"
        >
          Buy now
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ListItem component Check snapshot with price and name 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="main_products_item"
      >
        <img
          alt=""
          class="main_products_item_img"
        />
        <div
          class="main_products_item_container"
        >
          <p
            class="main_products_item_container_name"
          >
            testName
          </p>
          <p
            class="main_products_item_container_price"
          >
            100
             $
          </p>
          <button
            class="main_products_item_container_btn"
          >
            Add to wish
          </button>
          <button
            class="main_products_item_container_btn"
          >
            Buy now
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="main_products_item"
    >
      <img
        alt=""
        class="main_products_item_img"
      />
      <div
        class="main_products_item_container"
      >
        <p
          class="main_products_item_container_name"
        >
          testName
        </p>
        <p
          class="main_products_item_container_price"
        >
          100
           $
        </p>
        <button
          class="main_products_item_container_btn"
        >
          Add to wish
        </button>
        <button
          class="main_products_item_container_btn"
        >
          Buy now
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ListItem component Render with button remove 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="main_products_item"
      >
        <img
          alt=""
          class="main_products_item_img"
        />
        <div
          class="main_products_item_container"
        >
          <p
            class="main_products_item_container_name"
          />
          <p
            class="main_products_item_container_price"
          >
             $
          </p>
          <button
            class="main_products_item_container_btn"
            data-testid="btnRemoveWish"
          >
            <img
              alt="star"
              class="main_products_item_container_btn_img"
              src="favorite.png"
            />
          </button>
          <button
            class="main_products_item_container_btn"
          >
            Buy now
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="main_products_item"
    >
      <img
        alt=""
        class="main_products_item_img"
      />
      <div
        class="main_products_item_container"
      >
        <p
          class="main_products_item_container_name"
        />
        <p
          class="main_products_item_container_price"
        >
           $
        </p>
        <button
          class="main_products_item_container_btn"
          data-testid="btnRemoveWish"
        >
          <img
            alt="star"
            class="main_products_item_container_btn_img"
            src="favorite.png"
          />
        </button>
        <button
          class="main_products_item_container_btn"
        >
          Buy now
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ListItem component Render with button remove wish 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="main_products_item"
      >
        <img
          alt=""
          class="main_products_item_img"
        />
        <div
          class="main_products_item_container"
        >
          <p
            class="main_products_item_container_name"
          />
          <p
            class="main_products_item_container_price"
          >
             $
          </p>
          <button
            class="main_products_item_container_btn"
            data-testid="btnRemoveWish"
          >
            <img
              alt="star"
              class="main_products_item_container_btn_img"
              src="favorite.png"
            />
          </button>
          <button
            class="main_products_item_container_btn"
          >
            Buy now
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="main_products_item"
    >
      <img
        alt=""
        class="main_products_item_img"
      />
      <div
        class="main_products_item_container"
      >
        <p
          class="main_products_item_container_name"
        />
        <p
          class="main_products_item_container_price"
        >
           $
        </p>
        <button
          class="main_products_item_container_btn"
          data-testid="btnRemoveWish"
        >
          <img
            alt="star"
            class="main_products_item_container_btn_img"
            src="favorite.png"
          />
        </button>
        <button
          class="main_products_item_container_btn"
        >
          Buy now
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ListItem component Render with button wish list 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="main_products_item"
      >
        <img
          alt=""
          class="main_products_item_img"
        />
        <div
          class="main_products_item_container"
        >
          <p
            class="main_products_item_container_name"
          />
          <p
            class="main_products_item_container_price"
          >
             $
          </p>
          <button
            class="main_products_item_container_btn"
          >
            Add to wish
          </button>
          <button
            class="main_products_item_container_btn"
          >
            Buy now
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="main_products_item"
    >
      <img
        alt=""
        class="main_products_item_img"
      />
      <div
        class="main_products_item_container"
      >
        <p
          class="main_products_item_container_name"
        />
        <p
          class="main_products_item_container_price"
        >
           $
        </p>
        <button
          class="main_products_item_container_btn"
        >
          Add to wish
        </button>
        <button
          class="main_products_item_container_btn"
        >
          Buy now
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
